--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "repository" : {
     "type" : "git",
     "url" : "https://github.com/jayrave/android-strings.git"
+  },
+  "bin": {
+    "android-strings": "command-line.js"
   }
 }
