--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "Apache-2.0",
   "dependencies": {
     "xlsx": "0.8.0",
+    "xlsx-writestream": "0.4.0",
+    "xml2js": "0.4.15",
     "xmlbuilder": "4.1.0"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/jayrave/android-strings.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jayrave/android-strings.git"
   },
   "bin": {
     "android-strings": "command-line.js"
